[gd_scene load_steps=10 format=3 uid="uid://bysj0231a0wgy"]

[ext_resource type="Script" path="res://scenes/dogbase/speaker_dog.gd" id="1_fwlw7"]
[ext_resource type="Texture2D" uid="uid://dtvyuuaxygrsr" path="res://scenes/characters/dogs/dog/dog.png" id="1_lyaqv"]
[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_v35qx"]
[ext_resource type="Texture2D" uid="uid://bmievkerp5est" path="res://scenes/dogbase/speech_bubble_pointer.png" id="3_2jwjo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ui5b"]
content_margin_left = 40.0
content_margin_top = 25.0
content_margin_right = 40.0
content_margin_bottom = 25.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id="Animation_5fv03"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeakerDog:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(967, 470)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeakerDog:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogueLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(465, 316)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpeechBubblePointer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 410)]
}

[sub_resource type="Animation" id="Animation_d6j3q"]
resource_name = "dog"
length = 1.50002
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeakerDog:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.75, 0.916667),
"transitions": PackedFloat32Array(0.68302, 0.732043, 0.732043, 0.68302),
"update": 0,
"values": [Vector2(967, 470), Vector2(967, 480), Vector2(967, 480), Vector2(967, 470)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeakerDog:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 0, 1, 2, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ml245"]
resource_name = "jump_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeakerDog:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(967, 835), Vector2(967, 426), Vector2(967, 470), Vector2(967, 470)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogueLabel:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-468.0, 465.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpeechBubblePointer:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-141.0, 792.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ippb1"]
_data = {
"RESET": SubResource("Animation_5fv03"),
"dog": SubResource("Animation_d6j3q"),
"jump_up": SubResource("Animation_ml245")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v35qx")
script = ExtResource("1_fwlw7")

[node name="DialogueLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 316.0
offset_right = 835.0
offset_bottom = 397.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_1ui5b")
text = "Speech Bubble"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DogButton" type="Button" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 344.0
offset_right = 1118.0
offset_bottom = 626.0
focus_mode = 0
flat = true

[node name="SpeakerDog" type="Sprite2D" parent="."]
position = Vector2(967, 470)
rotation = 3.14159
scale = Vector2(1.25, -1.25)
texture = ExtResource("1_lyaqv")
hframes = 7
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "jump_up"
libraries = {
"": SubResource("AnimationLibrary_ippb1")
}

[node name="SpeechBubblePointer" type="Sprite2D" parent="."]
position = Vector2(792, 410)
scale = Vector2(0.518295, 0.518295)
texture = ExtResource("3_2jwjo")
